<resources>
    <string name="app_name">Project 0 - Udacity</string>
    <string name="business_name">~Detective_Khalifah Detective Agency~</string>
    <string name="business_description">Khalifah\'s detective firm that also serves as a hotspot for detective knights; got an issue astir begiving you trouble? We\'ll eradicate it.</string>
    <string name="business_active_hours">Open 1000–2200 (Military Time)\n10/7 — 10 hours, 7 days a week.</string>
    <string name="business_address">Address: Rue détectives.</string>
    <string name="image_desc">Glass chessboard set image from Pexels.com</string>
</resources>