<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/glass_chessboard_set_pexels" />

    <TextView
        android:id="@+id/tv_business_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/business_name"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_business_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/business_description"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_business_name" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_activity_hours"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/tv_activity_hours"
        android:text="@string/business_address"
        android:textColor="@android:color/darker_gray"
        android:textAppearance="?android:textAppearanceLarge"/>

    <TextView
        android:id="@+id/tv_activity_hours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/business_active_hours"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>